fixed alignment in payment page

--- a/src/css/payment.css
+++ b/src/css/payment.css
@@ -378,7 +378,7 @@ hr {
   }
 
   .payment-title {
-    font-size: 2.8vw;
+    font-size: clamp(1rem, 2.8vw, 2.2rem);
   }
 
   .payment-description {
@@ -523,6 +523,11 @@ hr {
 
   .payment-total-value {
     padding: 10px 15% 90px;
+  }
+
+  .payment-settings-container {
+    margin-top: 35px;
+    border-radius: 0 0 10px 10px;
   }
 
   .payment-submit-button {
